# jupyterlab-chat

./: .gitignore  README.md  components.json  install.json  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json
jupyter-config/server-config/: jupyterlab-chat.json
jupyter_chat/: __init__.py  handlers.py
src/: App.tsx  constants.ts  index.ts  index.tsx
src/components/chat/: AssistantMessage.tsx  AttachBar.tsx  ChatFAB.tsx  ChatHeader.tsx  ChatInput.tsx  ChatMenu.tsx  ChatPanel.tsx  MessagesList.tsx  SessionsList.tsx  StatusMessage.tsx  UserMessage.tsx
src/components/ui/: button.tsx  select.tsx  textarea.tsx
src/hooks/: useChat.ts  useDragResize.ts  useHasNotebook.ts  useKernelErrors.ts  useTheme.ts
src/lib/: api.ts  cell-actions.ts  constants.ts  markdown.tsx  notebook.ts  utils.ts
style/: index.css  tailwind.css
