[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyterlab-chat"
version = "0.1.0"
description = "Chat with LLMs in JupyterLab"
requires-python = ">=3.8"
dependencies = ["jupyter_server>=2.0.0"]

[tool.setuptools.packages.find]
include = ["jupyter_chat*"]

[tool.setuptools.package-data]
"jupyter_chat" = ["labextension/**/*"]
