[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyterlab-chat"
version = "0.3.0"
description = "Chat with LLMs in JupyterLab — floating panel with direct notebook read/write"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Antony" }]
requires-python = ">=3.10"
dependencies = ["jupyter_server>=2.0.0"]
keywords = ["jupyter", "jupyterlab", "jupyterlab-extension", "llm", "openrouter"]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/Antony-X/jupyterlab-chat"
Issues = "https://github.com/Antony-X/jupyterlab-chat/issues"

[tool.setuptools.packages.find]
include = ["jupyter_chat*"]

[tool.setuptools.package-data]
"jupyter_chat" = ["labextension/**/*"]
